--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -274,12 +274,26 @@
           href: configure-tokens.md
     - name: Definieren von benutzerdefinierten Attributen
       href: user-flow-custom-attributes.md
-    - name: Risikobasierte Authentifizierung
+    - name: Sicherheits- und Bedrohungsverwaltung
       items:
         - name: Untersuchen von Risiken mit Identity Protection
           href: identity-protection-investigate-risk.md
         - name: Konfigurieren des bedingten Zugriffs
           href: conditional-access-user-flow.md
+        - name: Entschärfen von Anmeldeinformationsangriffen
+          displayName: 'smart lockout, account lockout, password attack'
+          href: threat-management.md
+        - name: Partner für Betrugsschutz
+          items:
+            - name: Arkose Labs
+              href: partner-arkose-labs.md
+              displayName: 'fraud protection, fraud, Azure AD b2c, protection, B2Cprotection'
+            - name: BioCatch
+              href: partner-biocatch.md
+              displayName: 'fraud protection, fraud, Azure AD b2c, protection, B2Cprotection, user behavior'
+            - name: "Microsoft Dynamics\_365 Fraud Protection"
+              href: partner-dynamics-365-fraud-protection.md
+              displayName: 'm365 dynamics, dynamics fraud protection, fraud, 365 protection'
     - name: Konfigurieren einer Altersbeschränkung
       href: age-gating.md
     - name: API-Connectors
@@ -322,17 +336,6 @@
           href: partner-lexisnexis.md
         - name: Onfido
           href: partner-onfido.md
-    - name: Partner für Betrugsschutz
-      items:
-        - name: Arkose Labs
-          href: partner-arkose-labs.md
-          displayName: 'fraud protection, fraud, Azure AD b2c, protection, B2Cprotection'
-        - name: BioCatch
-          href: partner-biocatch.md
-          displayName: 'fraud protection, fraud, Azure AD b2c, protection, B2Cprotection, user behavior'
-        - name: "Microsoft Dynamics\_365 Fraud Protection"
-          href: partner-dynamics-365-fraud-protection.md
-          displayName: 'm365 dynamics, dynamics fraud protection, fraud, 365 protection'
     - name: Schützen des Zugriffs auf Legacy-Apps und lokale Apps
       items:
         - name: Ping Identity
@@ -538,8 +541,6 @@
           href: ../active-directory/fundamentals/resilience-b2c-developer-best-practices.md?bc=%2fazure%2factive-directory-b2c%2fbread%2ftoc.json&toc=%2fazure%2factive-directory-b2c%2fTOC.json
         - name: Überwachung und Analyse
           href: ../active-directory/fundamentals/resilience-with-monitoring-alerting.md?bc=%2fazure%2factive-directory-b2c%2fbread%2ftoc.json&toc=%2fazure%2factive-directory-b2c%2fTOC.json
-    - name: Verwaltung von Bedrohungen
-      href: threat-management.md
       displayName: security
     - name: Benutzerflowversionen
       href: user-flow-versions.md
