--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -51,11 +51,11 @@
     - name: Benutzeroberflächen-Framework
       items:
         - name: Erste Schritte mit zusammengesetzten Komponenten
-          href: 'https://azure.github.io/communication-ui-sdk/?path=/docs/quickstarts-get-started-with-composites--page'
-        - name: Erste Schritte mit zustandsbehafteten Clients
-          href: 'https://azure.github.io/communication-ui-sdk/?path=/docs/quickstarts-get-started-with-stateful-client--page'
+          href: 'https://azure.github.io/communication-ui-sdk/?path=/story/quickstarts-get-started-with-composites--page'
+        - name: Erste Schritte mit einem zustandsbehafteten Client
+          href: 'https://azure.github.io/communication-ui-sdk/?path=/story/quickstarts-get-started-with-stateful-client--page'
         - name: Erste Schritte mit Benutzeroberflächenkomponenten
-          href: 'https://azure.github.io/communication-ui-sdk/?path=/docs/quickstarts-get-started-with-ui-components--page'
+          href: 'https://azure.github.io/communication-ui-sdk/?path=/story/quickstarts-get-started-with-ui-components--page'
 - name: Tutorials
   expanded: false
   items:
@@ -106,12 +106,12 @@
           href: concepts/call-flows.md
         - name: Aufrufen von Flowtopologien
           href: concepts/detailed-call-flows.md
-    - name: Benutzeroberflächen-Framework
+    - name: UI-Bibliothek
       items:
-        - name: Übersicht über das Benutzeroberflächen-Framework
-          href: concepts/ui-framework/ui-sdk-overview.md
-        - name: Funktionen des Benutzeroberflächen-Frameworks
-          href: concepts/ui-framework/ui-sdk-features.md
+        - name: Übersicht über die UI-Bibliothek
+          href: concepts/ui-library/ui-library-overview.md
+        - name: Anwendungsfälle der UI-Bibliothek
+          href: concepts/ui-library/ui-library-use-cases.md
     - name: SDKs und REST-APIs
       href: concepts/sdk-options.md
     - name: Client- und Serverarchitektur
@@ -139,7 +139,7 @@
       href: concepts/troubleshooting-info.md
 - name: Proben
   items:
-    - name: Überblick
+    - name: Übersicht
       href: samples/overview.md
     - name: Hero-Beispiel für Gruppenanrufe
       href: samples/calling-hero-sample.md
@@ -173,6 +173,8 @@
           href: 'https://azure.github.io/azure-sdk-for-java/communication.html#azure-communication-chat'
         - name: Chat (Python)
           href: 'https://azure.github.io/azure-sdk-for-python/communication.html#azure-communication-chat'
+        - name: Chat (iOS)
+          href: 'https://azure.github.io/azure-sdk-for-ios/AzureCommunicationChat/index.html'
     - name: SMS-Bibliotheken
       items:
         - name: SMS (JavaScript)
