--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -147,8 +147,8 @@
         - name: Überwachen
           expanded: false
           items:
-            - name: Diagnose- und Überwachungsprotokolle
-              href: container-registry-diagnostics-audit-logs.md
+            - name: Überwachen der Containerregistrierung
+              href: monitor-service.md
             - name: Überwachen der Konformität mithilfe von Azure Policy
               href: container-registry-azure-policy.md
         - name: Problembehandlung
@@ -257,6 +257,8 @@
     - name: Azure Policy-Integrationen
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
+    - name: Überwachungsdaten
+      href: monitor-service-reference.md
 - name: Ressourcen
   expanded: false
   items:
