--- a/articles/data-factory/index.yml
+++ b/articles/data-factory/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: jonburchel
   ms.author: jburchel
   ms.date: 10/02/2019
-  ms.openlocfilehash: 719d57bbc676e699a82104f9a341bd443cf768ff
-  ms.sourcegitcommit: fc9fd6e72297de6e87c9cf0d58edd632a8fb2552
+  ms.openlocfilehash: 00cf99e97df08bde67e31250b4222fc68f0140c6
+  ms.sourcegitcommit: 17345cc21e7b14e3e31cbf920f191875bf3c5914
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 04/30/2021
-  ms.locfileid: "108293132"
+  ms.lasthandoff: 05/19/2021
+  ms.locfileid: "110074996"
 landingContent:
 - title: Informationen zu Azure Data Factory
   linkLists:
@@ -56,6 +56,10 @@ landingContent:
       url: ./quickstart-create-data-factory-rest-api.md
     - text: Resource Manager-Vorlage
       url: ./quickstart-create-data-factory-resource-manager-template.md
+  - linkListType: learn
+    links:
+    - text: Einführung in Azure Data Factory
+      url: https://docs.microsoft.com/learn/modules/intro-to-azure-data-factory/
 - title: Datenverschiebung
   linkLists:
   - linkListType: concept
