--- a/articles/cognitive-services/Custom-Vision-Service/toc.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/toc.yml
@@ -5,6 +5,8 @@
   items:
     - name: Was ist Custom Vision?
       href: overview.md
+    - name: Preise und Einschränkungen
+      href: limits-and-quotas.md
     - name: Neues
       href: whats-new.md
 - name: Schnellstarts
@@ -97,8 +99,6 @@
       href: ../cognitive-services-support-options.md?context=/azure/cognitive-services/custom-vision-service/context/context
     - name: Beispiele
       href: /samples/browse/?products=azure&term=vision
-    - name: Grenzen und Kontingente
-      href: limits-and-quotas.md
     - name: Azure-Roadmap
       href: 'https://azure.microsoft.com/updates/?product=cognitive-services'
     - name: Versionsinformationen
