--- a/articles/cognitive-services/Anomaly-Detector/toc.yml
+++ b/articles/cognitive-services/Anomaly-Detector/toc.yml
@@ -60,8 +60,6 @@
       href: concepts/anomaly-detection-best-practices.md
     - name: Predictive Maintenance-Architektur (Multivariat)
       href: concepts/multivariate-architecture.md
-    - name: Problembehandlung bei multivariaten Anomalien
-      href: concepts/troubleshoot.md
     - name: SR- und CNN-Anomalieerkennung (Spectral Residual und Convolutional Neural Net)
       href: 'https://arxiv.org/abs/1906.03821'
     - name: Multivariate Zeitreihen-Anomalieerkennung über ein Graph-Aufmerksamkeitsnetzwerk
@@ -104,7 +102,9 @@
       href: 'https://azure.microsoft.com/solutions/architecture/anomaly-detector-process/'
     - name: Azure-Updates
       href: 'https://azure.microsoft.com/en-us/updates/?product=cognitive-services'
-    - name: Technische Blogs
+    - name: Problembehandlung bei multivariaten Anomalien
+      href: concepts/troubleshoot.md
+    - name: Technische Artikel
       items:
         - name: Einführung in die API für die Azure-Anomalieerkennung
           href: 'https://techcommunity.microsoft.com/t5/AI-Customer-Engineering-Team/Introducing-Azure-Anomaly-Detector-API/ba-p/490162'
