--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -274,6 +274,8 @@
                   items:
                     - name: Verbinden mit der VM-Konsole
                       href: azure-stack-edge-gpu-connect-virtual-machine-console.md
+                    - name: VM-Imageupload
+                      href: azure-stack-edge-troubleshoot-virtual-machine-image-upload.md
         - name: Verwalten von Zertifikaten
           items:
             - name: Anforderungen
@@ -342,7 +344,9 @@
               href: azure-stack-edge-contact-microsoft-support.md
     - name: Freigegebene Versionshinweise
       items:
-        - name: '2103: Aktuell'
+        - name: '2105: Aktuell'
+          href: azure-stack-edge-gpu-2105-release-notes.md
+        - name: 2103
           href: azure-stack-edge-gpu-2103-release-notes.md
         - name: 2101
           href: azure-stack-edge-gpu-2101-release-notes.md
