--- a/articles/active-directory/roles/TOC.yml
+++ b/articles/active-directory/roles/TOC.yml
@@ -32,6 +32,8 @@
           href: security-emergency-access.md
 - name: Anleitungen
   items:
+    - name: Voraussetzungen
+      href: prerequisites.md
     - name: Auflisten der Rollendefinitionen
       href: role-definitions-list.md
     - name: Auflisten der Rollenzuweisungen
