--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -141,10 +141,14 @@
               href: vpn-profile-intune.md
         - name: VPN-Clients
           items:
-            - name: Windows 10
-              href: openvpn-azure-ad-client.md
             - name: OpenVPN
               href: howto-openvpn-clients.md?
+            - name: Azure AD-Authentifizierung
+              items:
+                - name: "Windows\_10"
+                  href: openvpn-azure-ad-client.md
+                - name: 'macOS: Vorschau'
+                  href: openvpn-azure-ad-client-mac.md
         - name: "Konfigurieren von Always\_On-Tunneln"
           items:
             - name: Benutzertunnel
