--- a/articles/azure-vmware/index.yml
+++ b/articles/azure-vmware/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: shortpatti
   ms.author: v-patsho
   ms.date: 05/11/2021
-  ms.openlocfilehash: ae12f4ed9d356eb7a196164574766868ea469f1a
-  ms.sourcegitcommit: 1b19b8d303b3abe4d4d08bfde0fee441159771e1
+  ms.openlocfilehash: 43baa8884bb7ab649ddba0e0516d828837a529ec
+  ms.sourcegitcommit: 17345cc21e7b14e3e31cbf920f191875bf3c5914
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 05/11/2021
-  ms.locfileid: "109754333"
+  ms.lasthandoff: 05/19/2021
+  ms.locfileid: "110086840"
 landingContent:
 - title: Informationen zu Azure VMware Solution
   linkLists:
@@ -107,15 +107,17 @@ landingContent:
   - linkListType: reference
     links:
     - text: Anfordern des Hostkontingents für Azure VMware Solution
-      url: enable-azure-vmware-solution.md
+      url: request-host-quota-azure-vmware-solution.md
     - text: Einsparen von Kosten mit einer reservierten Instanz
       url: reserved-instance.md
     - text: Erstellen einer Azure VMware Solution-Bewertung
       url: /azure/migrate/how-to-create-azure-vmware-solution-assessment?context=/azure/azure-vmware/context/context
   - linkListType: how-to-guide
     links:
-    - text: Verwalten von DHCP
-      url: manage-dhcp.md
+    - text: Konfigurieren und Verwalten von DHCP
+      url: configure-dhcp-azure-vmware-solution.md
+    - text: Konfigurieren von DHCP in VMware HCX-Netzwerken mit L2-Stretching
+      url: configure-l2-stretched-vmware-hcx-networks.md
     - text: Konfigurieren von NSX-Netzwerkkomponenten
       url: configure-nsx-network-components-azure-portal.md
     - text: Konfigurieren des GitHub Enterprise-Servers
